--- a/front-basic/html-structure.html
+++ b/front-basic/html-structure.html
@@ -18,7 +18,7 @@
         </nav>
     </Header>
     <main> <!-- 웹 페이지의 본론 부분에 해당 -->
-        <aside> <!-- 웹 피이지의 좌우측면 영역에 해당-->
+        <aside> <!-- 웹 페이지의 좌우측면 영역에 해당-->
             <nav>
                 <a href="#1a">1 article</a>  <!-- # : id를 나타내는 영역-->
                 <a href="#2a">2 article</a>
